# binrawview

./: CMakeLists.txt  flake.nix
src/: binrawview.cpp  binrawview.hpp  main.cpp
